# water_link

./: .gitignore  CMakeLists.txt  README.md  example.md
components/water_common/: CMakeLists.txt  common_data.h  error_code.h  log_utils.c  log_utils.h
components/water_driver/: CMakeLists.txt
components/water_driver/d_display/: d_ht16k33.c  d_ht16k33.h  d_ws2812.c  d_ws2812.h
components/water_driver/d_input/: d_switch.c  d_switch.h
components/water_driver/d_pipette/: d_pipette_232.c  d_pipette_232.h  d_pipette_can.c  d_pipette_can.h
components/water_driver/d_w5500/: d_w5500.c  d_w5500.h  d_w5500_net.c  d_w5500_net.h  d_w5500_reg.c  d_w5500_reg.h  d_w5500_socket.c  d_w5500_socket.h
components/water_driver/w5500/: w5500.c  w5500.h
components/water_port/: CMakeLists.txt
components/water_port/can/: can.c
components/water_port/gpio/: gpio.c  gpio.h
components/water_port/i2c/: i2c.c
components/water_port/p_can/: p_can.c  p_can.h
components/water_port/p_gpio/: p_gpio.c  p_gpio.h
components/water_port/p_i2c/: p_i2c.c  p_i2c.h
components/water_port/p_rs232/: p_rs232.c  p_rs232.h
components/water_port/p_rs485/: p_rs485.c  p_rs485.h
components/water_port/p_spi/: p_spi.c  p_spi.h
components/water_port/rs232/: rs232.c
components/water_port/rs485/: rs485.c  rs485.h
components/water_port/spi/: spi.c  spi.h
components/water_service/: CMakeLists.txt
components/water_service/s_ethernet/: s_dhcp.c  s_dhcp.h  s_ping.c  s_ping.h  s_udp.c  s_udp.h
main/: CMakeLists.txt  main.c
